Spacing fix

--- a/src/scss/_typography.scss
+++ b/src/scss/_typography.scss
@@ -163,7 +163,7 @@ cite,
         }
     }
 
-    + .lede {
+    ~ .lede {
         + section {
             margin-top: 5em;
 
